--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dev-utils": "^9.0.4",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.1",
@@ -92,6 +93,7 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
+    "@types/react-transition-group": "^4.4.0",
     "@types/redux-actions": "^2.6.1",
     "chai": "^4.2.0",
     "easylink": "^1.1.0",
