--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     ]
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.1.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-transition-group": "4.4.1",
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
@@ -92,70 +92,70 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.6.0",
-    "@svgr/webpack": "4.3.2",
-    "@types/chai": "^4.2.7",
-    "@types/jest": "^24.0.25",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-redux": "^7.1.4",
+    "@babel/core": "7.12.3",
+    "@svgr/webpack": "5.4.0",
+    "@types/chai": "^4.2.14",
+    "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
     "@types/react-transition-group": "^4.4.0",
     "@types/redux-actions": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "camelcase": "^6.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chai": "^4.2.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
+    "css-loader": "5.0.1",
+    "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "easylink": "^1.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.0",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "eslint": "^7.13.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "6.2.0",
+    "fs-extra": "9.0.1",
+    "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "is-wsl": "^2.2.0",
+    "jest": "26.6.3",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "26.6.2",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "1.3.0",
+    "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "5.0.0",
+    "postcss-loader": "4.0.4",
+    "postcss-normalize": "9.0.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
-    "react-app-polyfill": "^1.0.3",
-    "react-dev-utils": "^9.0.4",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.4",
-    "tslint": "^5.20.0",
-    "tslint-react": "^4.1.0",
-    "typescript": "^3.6.3",
-    "url-loader": "2.1.0",
-    "webpack": "4.40.2",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "postcss-safe-parser": "5.0.2",
+    "react-app-polyfill": "^2.0.0",
+    "react-dev-utils": "^11.0.0",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "10.0.5",
+    "semver": "7.3.2",
+    "style-loader": "2.0.0",
+    "terser-webpack-plugin": "5.0.3",
+    "ts-pnp": "1.2.0",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.0.5",
+    "url-loader": "4.1.1",
+    "webpack": "5.4.0",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4"
   }
 }
