--- a/package.json
+++ b/package.json
@@ -91,6 +91,34 @@
     "redux-saga": "1.1.3",
     "redux-thunk": "2.3.0"
   },
+  "config": {
+    "validate-commit-msg": {
+      "helpMessage": "\nPlease fix your commit message (and consider using 'npm run commit')\n",
+      "types": [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "perf",
+        "test",
+        "chore",
+        "revert"
+      ],
+      "scope": {
+        "required": false,
+        "allowed": [
+          "*"
+        ],
+        "validate": false,
+        "multiple": false
+      },
+      "warnOnFail": false,
+      "maxSubjectLength": 50,
+      "subjectPattern": ".+",
+      "autoFix": false
+    }
+  },
   "devDependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
@@ -125,6 +153,7 @@
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
@@ -153,6 +182,7 @@
     "tslint-react": "^4.1.0",
     "typescript": "^3.6.3",
     "url-loader": "2.1.0",
+    "validate-commit-msg": "^2.14.0",
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
