--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
+    "commit": "git-cz",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js"
   },
@@ -139,6 +140,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chai": "^4.2.0",
+    "commitizen": "^4.2.4",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
@@ -152,6 +154,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "git-cz": "^4.8.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "husky": "^7.0.4",
     "identity-obj-proxy": "3.0.0",
