--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "redux": "4.0.5",
     "redux-actions": "2.6.5",
     "redux-saga": "1.1.3",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "snappy": "^7.1.1"
   },
   "config": {
     "validate-commit-msg": {
