--- a/package.json
+++ b/package.json
@@ -83,14 +83,13 @@
     ]
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.1.1",
-    "react-transition-group": "4.4.1",
-    "redux": "4.0.5",
-    "redux-actions": "2.6.5",
-    "redux-saga": "1.1.3",
-    "redux-thunk": "2.3.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.1.1",
+    "redux": "4.2.1",
+    "redux-actions": "3.0.0",
+    "redux-saga": "1.2.3",
+    "redux-thunk": "2.4.2"
   },
   "config": {
     "validate-commit-msg": {
@@ -121,74 +120,80 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.6.0",
-    "@svgr/webpack": "4.3.2",
-    "@types/chai": "^4.2.7",
-    "@types/jest": "^24.0.25",
-    "@types/react": "^16.9.3",
-    "@types/react-dom": "^16.9.1",
-    "@types/react-redux": "^7.1.4",
-    "@types/react-transition-group": "^4.4.0",
-    "@types/redux-actions": "^2.6.1",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chai": "^4.2.0",
-    "commitizen": "^4.2.4",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "5.1.0",
+    "@babel/core": "7.22.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "8.0.1",
+    "@types/chai": "^4.3.5",
+    "@types/jest": "^29.5.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-transition-group": "^4.4.6",
+    "@types/redux-actions": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "9.1.2",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
+    "camelcase": "^7.0.1",
+    "case-sensitive-paths-webpack-plugin": "2.4.0",
+    "chai": "^4.3.7",
+    "commitizen": "^4.3.0",
+    "css-loader": "6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "dotenv": "16.3.1",
+    "dotenv-expand": "10.0.0",
     "easylink": "^1.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.0",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "git-cz": "^4.8.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "husky": "^7.0.4",
+    "eslint": "^8.43.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "file-loader": "6.2.0",
+    "fs-extra": "11.1.1",
+    "git-cz": "^4.9.0",
+    "html-webpack-plugin": "5.5.3",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
-    "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
-    "react-app-polyfill": "^1.0.3",
-    "react-dev-utils": "^9.0.4",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.4",
-    "tslint": "^5.20.0",
-    "tslint-react": "^4.1.0",
-    "typescript": "^3.6.3",
-    "url-loader": "2.1.0",
+    "is-wsl": "^2.2.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "29.5.0",
+    "jest-watch-typeahead": "2.2.2",
+    "mini-css-extract-plugin": "2.7.6",
+    "node-sass": "^9.0.0",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
+    "pnp-webpack-plugin": "1.7.0",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "7.3.3",
+    "postcss-normalize": "10.0.1",
+    "postcss-preset-env": "8.5.1",
+    "postcss-safe-parser": "6.0.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.14.0",
+    "react-transition-group": "4.4.5",
+    "resolve": "1.22.2",
+    "resolve-url-loader": "5.0.0",
+    "sass-loader": "13.3.2",
+    "semver": "7.5.3",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "3.3.3",
+    "terser-webpack-plugin": "5.3.9",
+    "ts-pnp": "1.2.0",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
+    "typescript": "^5.1.3",
+    "url-loader": "4.1.1",
     "validate-commit-msg": "^2.14.0",
-    "webpack": "4.40.2",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "webpack": "5.88.0",
+    "webpack-dev-server": "4.15.1",
+    "webpack-manifest-plugin": "5.0.0",
+    "workbox-webpack-plugin": "7.0.0"
   }
 }
